--- a/src/grid_navigation/CMakeLists.txt
+++ b/src/grid_navigation/CMakeLists.txt
@@ -54,7 +54,7 @@ include_directories(${OpenCV_INCLUDE_DIRS})
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
- add_message_files(FILES TrackTransform.msg Obstacle.msg Obstacles.msg)
+ add_message_files(FILES Obstacle.msg Obstacles.msg)
  
 
 
