--- a/src/grid_navigation/package.xml
+++ b/src/grid_navigation/package.xml
@@ -43,9 +43,19 @@
   <build_depend>opencv</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>car_navigation_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>nav_msgs</build_depend>
+  <build_depend>visualization_msgs</build_depend>
+  <build_depend>e_motion_perception_msgs</build_depend>
   <run_depend>opencv</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>car_navigation_msgs</run_depend>
+  <run_depend>nav_msgs</run_depend>
+  <run_depend>geometry_msgs</run_depend>
+  <run_depend>visualization_msgs</run_depend>
+  <run_depend>e_motion_perception_msgs</run_depend>
  
 
 
