--- a/src/car_navigation_msgs/CMakeLists.txt
+++ b/src/car_navigation_msgs/CMakeLists.txt
@@ -52,6 +52,8 @@ add_message_files(
   Status.msg
   Obstacle.msg
   Obstacles.msg
+  WayPoint.msg
+  WayPoints.msg
 )
 
 ## Generate services in the 'srv' folder
