--- a/src/grid_navigation/package.xml
+++ b/src/grid_navigation/package.xml
@@ -48,6 +48,7 @@
   <build_depend>nav_msgs</build_depend>
   <build_depend>visualization_msgs</build_depend>
   <build_depend>e_motion_perception_msgs</build_depend>
+  <build_depend>message_filters</build_depend>
   <run_depend>opencv</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
@@ -56,7 +57,7 @@
   <run_depend>geometry_msgs</run_depend>
   <run_depend>visualization_msgs</run_depend>
   <run_depend>e_motion_perception_msgs</run_depend>
- 
+  <run_depend>message_filters</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
